src/style.css
/* ... */
.react-date-picker__inputGroup {
  font-size: 16px;
  margin-left: -10px;
  padding: 0px !important;
}

.react-date-picker__wrapper {
  margin-top: -3px;
}

::-webkit-input-placeholder {
  /* Edge */
  color: black !important;
}

:-ms-input-placeholder {
  /* Internet Explorer 10-11 */
  color: black !important;
}

::placeholder {
  color: black !important;
}

.rmsc .gray {
  color: black !important;
}

.dropdown {
  position: relative !important;
}

.dropdown:after {
  content: "<";
  font-family: "Manrope", sans-serif;
  transform: rotate(-90deg);
  font-size: 29px;
  color: black;
  right: 11px;
  top: -2px;
  position: absolute;
  pointer-events: none;
}

div.filter-row>div.col-md-2>div.react-date-picker {
  padding: 5px 0px 0px 0px !important;
}

div.project-allocation>button.upload-button-btn {
  margin-top: -50px !important;
  margin-right: 170px !important;
}

div.project-allocation>input.upload-input-btn {
  margin-top: -50px !important;
  margin-right: 170px !important;
}

div.employee>button.upload-button-btn,
div.employee>input.upload-input-btn {
  margin-right: 135px !important;
}

div.holiday>button.upload-button-btn,
div.holiday>input.upload-input-btn {
  margin-right: 120px !important;
}

div.market>button.upload-button-btn,
div.market>input.upload-input-btn {
  margin-right: 119px !important;
}

div.project>button.upload-button-btn,
div.project>input.upload-input-btn {
  margin-right: 119px !important;
}






.dropdown-content {
  padding: 0px !important;
  margin: 0px !important;
}

.rmsc .select-item {
  padding: 0px 0px 0px 10px !important;
}

.filter-row>.col-md-2 {
  width: 12.666667% !important;
}

.rmsc.multi-select {
  font-size: 14px;
}

.filter-row>.form-group>.form-label {
  font-size: 14px !important;
}

.filter-row>.form-group>.dropdown>.form-control {
  font-size: 14px;
  height: 40px;
}

.filter-row>.form-group>.react-date-picker>.react-date-picker__wrapper>.react-date-picker__inputGroup {
  font-size: 13px;
}

.filter-row>.form-group>.react-date-picker>.react-date-picker__wrapper>.react-date-picker__button svg {
  width: 12px;
  height: 12px;
}

.filter-row>.form-group>.react-date-picker>.react-date-picker__wrapper>button.react-date-picker__clear-button.react-date-picker__button {
  padding: 4px 0px 0px 0px !important;
}

.filter-row>.form-group>.react-date-picker>.react-date-picker__wrapper>.react-date-picker__calendar-button.react-date-picker__button {
  padding: 3px 4px 0px 6px;
}

.sc-dkrFOg.iSAVrt.rdt_TableHeadRow {
  font-size: 14px;
}

/* new styles */

/* h1.Heading-Cls {
  font-size: 20px;
  margin-bottom: 0px;
}

.Page-Heading>p>span {
  font-size: 13px;
}

.Page-Heading>p {
  margin-bottom: 5px;
} */

/* .sc-dkrFOg.iSAVrt.rdt_TableHeadRow {
  font-size: 14px;
  height: 12px;
  background: white !important;
  border: black 2px solid !important;
} */

.btn {
  background-color: #0078d7 !important
}

button.btn.btn-primary {
  font-size: 13px;
}

.modal {
  max-height: 1000px !important;
  height: 600px !important;
}

.filter-row>.form-group>div.rmsc.multi-select>div.dropdown-container {
  height: 30px !important;
  border-radius: 6px !important;
}



.filter-row>.form-group>.multi-select>.dropdown-container>.dropdown-heading {
  height: 30px !important;
  /* padding-top: 2px !important; */
}

.filter-row>.form-group>.rmsc>.dropdown-container>.dropdown-heading>.dropdown-heading-value {
  font-size: 13px !important;
}

svg.dropdown-heading-dropdown-arrow.gray {
  margin-top: -4px !important;
}

.filter-row>.form-group>.dropdown>.form-control {
  font-size: 13px;
  height: 30px;
  border-radius: 6px !important;
}

.filter-row>.form-group {
  padding: 0px 3px 0px 3px !important;
  margin-bottom: 10px !important;
}

.filter-row {
  padding-left: 10px !important;

}

/* @media screen and (max-width: 992px) {
  .filter-row {
    background-color: blue;
  }
} */

.dropdown:after {
  content: "<";
  font-family: "Manrope", sans-serif;
  transform: rotate(-90deg);
  font-size: 29px;
  color: black;
  right: 13px;
  top: -6px;
  position: absolute;
  pointer-events: none;
}

.search-filter>input {
  border-radius: 6px;
  height: 30px;
  font-size: 13px;
}

.SearchFilter{
  width: 17%;
  float: right !important;
  justify-content: flex-end;
  margin-top: 5px;
}



label.form-label {
  font-size: 15px;
}

.form-control {
  margin-bottom: -14px;
}


.TableContentBorder{
  border: 1px solid rgba(47,79,79, 0.2);
  background-color:#fff;
  border-bottom: none;
  border-right: none;
}

.jmSsVz>button.btn.btn-primary {
  position: absolute !important;
  height: 26px !important;
  font-size: 13px !important;
  padding: 0px 9px 0px 9px !important;
  border-top-left-radius: 0px !important;
  border-bottom-left-radius: 0px !important;
  background-color: #0078d7;
}

.search-btn::-webkit-input-placeholder {
  /* Edge */
  color: #686262 !important;
}

.fade.modal.show {
  height: 100% !important;
}

.modal-dialog {
  height: 100% !important;
}

.modal-content {
  height: 100% !important;
}

.download-button-btn,
.upload-button-btn {
  font-size: 21px !important;
  padding: 0px 4px 0px 4px !important;
}

.Toastify__toast-container--top-right {
  top: 2.5em !important;
}

.user-manual {
  margin-top: 10px;
  margin-left: 10px
}

div.col-md-12>button.btn-primary {
  margin-top: 10px;
}

 button#export-pdf-btn,
button#export-excel-btn {
  display: block;
  width: 100%;
  padding: 5px 7px;
  color: #000;
  background-color: #FFF;
  border-radius: 5px;
  font-size: 12px;
  border: 0px;
}

button#export-pdf-btn:hover,
button#export-excel-btn:hover {
  background: #EEE;
  color: #000;
}

.export-doc-row {
  position: absolute;
  z-index: 1;
}

.dropdown-container>.dropdown-content {
  z-index: 999 !important;
}

#ExportBox {
  margin-top: 6px;
  width: 90px;
  padding: 3px 6px 4px 6px;
  border-radius: 4px;
  height: 33px;
}
/* ... */

